# UtilityFunctions

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
utility_functions/: __init__.py  _camelcase2snakecase.py  _file_modification_transaction.py
